fix: Prevent education content from being too long

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -111,6 +111,7 @@ body {
         color: $purple;
     }
     .school {
+        max-width: 700px;
         display: flex;
         justify-content: space-between;
         padding: 12px;
